crates/o4e-render/src/snapshots/o4e_render__svg__tests__svg_cjk_basic.snap
---
source: crates/o4e-render/src/svg.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0.00 -1.00 40.00 1.50">
  <g id="text">
    <path id="glyph-0" d="M14.93,-13.01 L14.93,-10.18 C14.93,-6.58 14.11,-1.92 5.66,1.25 C6.43,1.92 7.63,3.22 8.11,4.13 C17.47,0.38 18.62,-5.47 18.62,-10.08 L18.62,-13.01 Z M11.09,-27.74 L22.13,-27.74 L22.13,-22.51 L11.09,-22.51 Z M25.73,-27.74 L36.86,-27.74 L36.86,-22.51 L25.73,-22.51 Z M11.09,-35.71 L22.13,-35.71 L22.13,-30.58 L11.09,-30.58 Z M25.73,-35.71 L36.86,-35.71 L36.86,-30.58 L25.73,-30.58 Z M30.19,-13.01 L30.19,3.74 L33.89,3.74 L33.89,-12.91 C36.91,-10.85 40.32,-9.17 43.73,-8.11 C44.26,-9.02 45.36,-10.42 46.18,-11.18 C40.46,-12.67 34.70,-15.74 31.01,-19.49 L40.56,-19.49 L40.56,-38.78 L7.54,-38.78 L7.54,-19.49 L17.14,-19.49 C13.44,-15.70 7.68,-12.48 2.16,-10.90 C2.98,-10.13 4.03,-8.83 4.56,-7.87 C10.90,-10.13 17.57,-14.45 21.55,-19.49 L26.83,-19.49 C28.66,-17.09 31.06,-14.88 33.74,-13.01 Z" transform="translate(0.00, 0.00)" />
  </g>
</svg>
