crates/o4e-render/src/snapshots/o4e_render__svg__tests__svg_latin_basic.snap
---
source: crates/o4e-render/src/svg.rs
expression: svg
---
<svg xmlns="http://www.w3.org/2000/svg" viewBox="0.00 -1.00 32.00 1.50">
  <g id="text">
    <path id="glyph-0" d="M21.80,-0.00 L18.36,-8.84 L7.04,-8.84 L3.64,-0.00 L0.00,-0.00 L11.16,-28.68 L14.40,-28.68 L25.52,-0.00 L21.80,-0.00 Z M14.08,-20.68 Q13.96,-21.00 13.68,-21.84 Q13.40,-22.68 13.14,-23.58 Q12.88,-24.48 12.72,-24.96 Q12.44,-23.72 12.08,-22.54 Q11.72,-21.36 11.48,-20.68 L8.24,-12.04 L17.28,-12.04 L14.08,-20.68 Z" transform="translate(0.00, 0.00)" />
  </g>
</svg>
